# Zark-Bot-1

./: .replit  bot.json  cog_admin.py  cog_antilien.py  cog_bienvenue.py  cog_channel.py  cog_delchannel.py  cog_fun.py  cog_moderation.py  cog_s.py  cog_swear.py  cog_utill.py  cog_warn.py  main.py  merde.json  pyproject.toml  replit.nix  urgence.json
.local/share/virtualenv/wheel/3.8/image/1/CopyPipInstall/pip-21.3.1-py3-none-any/pip-21.3.1.dist-info/: RECORD
.local/share/virtualenv/wheel/3.8/image/1/CopyPipInstall/setuptools-58.3.0-py3-none-any/setuptools-58.3.0.dist-info/: RECORD
.local/share/virtualenv/wheel/3.8/image/1/CopyPipInstall/wheel-0.37.0-py2.py3-none-any/wheel-0.37.0.dist-info/: RECORD
Fonction-ipt/: activity_log.json  channel.json  config.json  delete.json  swear.json  warn.json
swear-list/: swear_1091660772905594890.txt  swear_1147964035803906059.txt  swear_1165608319512219758.txt  swear_1172100554110025809.txt  swear_1179854678863908874.txt  swear_1189872309444558858.txt  swear_1191742765403492523.txt  swear_829003669415788584.txt
