[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
numpy = "^1.22.2"
Command = "^0.1.0"
discord = "^1.7.3"
Flask = "^2.2.3"
gTTS = "^2.3.1"
googletrans = "^3.0.0"
youtube_dl = "^2021.12.17"
tasks = "^2.8.0"
bs4 = "^0.0.1"
pyttsx3 = "^2.90"
discord-webhook = "^1.1.0"
Pillow = "^10.0.0"
save = "0.1"
pydub = "^0.25.1"
pytz = "^2023.3.post1"
Unidecode = "^1.3.7"
openai = "^0.28.1"
langdetect = "^1.0.9"
"discord.py" = "^2.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"